tests/ui/error-codes/E0432.stderr
error[E0432]: unresolved import `something`
  --> $DIR/E0432.rs:1:5
   |
LL | use something::Foo;
   |     ^^^^^^^^^ you might be missing crate `something`
   |
   = help: consider adding `extern crate something` to use the `something` crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
